<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kris.po.PresentationLayer.AddSolutionActivity">

    <TextView
        android:id="@+id/addSol_text_view_scramble"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addSol_text_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/timer_zero_value"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSol_text_view_scramble" />

    <TextView
        android:id="@+id/addSol_text_view_f2l"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/f2l_pl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSol_text_view_time" />

    <TextView
        android:id="@+id/addSol_text_view_xcross"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/xcross_pl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSol_text_view_f2l" />

    <TextView
        android:id="@+id/addSol_text_view_ollskip"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/oll_skip_pl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSol_text_view_xcross" />

    <TextView
        android:id="@+id/addSol_text_view_pllskip"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/pll_skip_pl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSol_text_view_ollskip" />

    <Button
        android:id="@+id/addSol_button_add_solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_solution_pl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSol_text_view_pllskip" />

    <CheckBox
        android:id="@+id/addSol_checkBox_f2l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="73dp"
        app:layout_constraintStart_toEndOf="@+id/addSol_text_view_f2l"
        app:layout_constraintTop_toBottomOf="@+id/addSol_text_view_scramble" />

    <CheckBox
        android:id="@+id/addSol_checkBox_xcross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toEndOf="@+id/addSol_text_view_xcross"
        app:layout_constraintTop_toBottomOf="@+id/addSol_checkBox_f2l" />

    <CheckBox
        android:id="@+id/addSol_checkBox_ollskip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@+id/addSol_text_view_ollskip"
        app:layout_constraintTop_toBottomOf="@+id/addSol_checkBox_xcross" />

    <CheckBox
        android:id="@+id/addSol_checkBox_pllskip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toEndOf="@+id/addSol_text_view_pllskip"
        app:layout_constraintTop_toBottomOf="@+id/addSol_checkBox_ollskip" />
</android.support.constraint.ConstraintLayout>
